--- a/components/feature/downloads/src/main/res/values-kab/strings.xml
+++ b/components/feature/downloads/src/main/res/values-kab/strings.xml
@@ -6,14 +6,14 @@
     <!-- Text shown on the second row of a paused download notification. -->
     <string name="mozac_feature_downloads_paused_notification_text">Asader yesteɛfa</string>
     <!-- Text shown on the second row of an completed download notification. The filename is shown on the first row. -->
-    <string name="mozac_feature_downloads_completed_notification_text2">Asider yemmed</string>
+    <string name="mozac_feature_downloads_completed_notification_text2">Asader yemmed</string>
     <!-- Text shown on the second row of an failed download notification. The filename is shown on the first row. -->
     <string name="mozac_feature_downloads_failed_notification_text2">Ifuyla ittwazedmen</string>
 
     <!-- Alert dialog confirmation before download a file, this is the title. %1$s will be replaced with the name of the file. -->
-    <string name="mozac_feature_downloads_dialog_title2">Asider (%1$s)</string>
+    <string name="mozac_feature_downloads_dialog_title2">Asader (%1$s)</string>
     <!-- Alert dialog confirmation before download a file, this is the positive action. -->
-    <string name="mozac_feature_downloads_dialog_download">Sider</string>
+    <string name="mozac_feature_downloads_dialog_download">Sader</string>
     <!-- Alert dialog confirmation before download a file, this is the negative action. -->
     <string name="mozac_feature_downloads_dialog_cancel">Sefsex</string>
 
@@ -45,4 +45,13 @@
     <string name="mozac_feature_downloads_unable_to_open_third_party_app">Ur yizmir ara ad yeldi %1$s</string>
     <!-- Text for the info dialog when write to storage permissions have been denied but user tries to download a file. -->
     <string name="mozac_feature_downloads_write_external_storage_permissions_needed_message">Tisirag n unekcum ɣer yifuyla d yimidyaten ttusrant i usader n yufuyla. Rzu ɣer yiɣewwaren n Android, fren tisirag syen sit ɣef sireg.</string>
+
+    <!-- Alert dialog confirmation before cancelling downloads, this is the title   -->
+    <string name="mozac_feature_downloads_cancel_active_downloads_warning_content_title">Sefsex isidar usligen?</string>
+    <!-- Alert dialog confirmation before cancelling private downloads, this is the body. %1$s will be replaced with the name of the file. -->
+    <string name="mozac_feature_downloads_cancel_active_private_downloads_warning_content_body">Ma tmedleḍ akk accaren usligen tura, %1$s n uzdam ad iţwasefsex. Tebɣiḍ aţefɣeḍ si tunigin tusligt?</string>
+    <!-- Alert dialog confirmation before cancelling downloads, this is the positive action. -->
+    <string name="mozac_feature_downloads_cancel_active_downloads_accept">Sefsex isadaren</string>
+    <!-- Alert dialog confirmation before cancelling downloads, this is the negative action. Leaves user in Private browsing -->
+    <string name="mozac_feature_downloads_cancel_active_private_downloads_deny">Qqim deg tunigin tusligt</string>
 </resources>
