--- a/components/browser/errorpages/src/main/res/values-kk/strings.xml
+++ b/components/browser/errorpages/src/main/res/values-kk/strings.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- The default document title of an error page (i.e., the contents of the `<title>` tag). -->
-    <string name="mozac_browser_errorpages_page_title">Парақты жүктегенде қате кетті</string>
-
     <!-- The button that appears at the bottom of an error page. -->
     <string name="mozac_browser_errorpages_page_refresh">Қайталап көру</string>
-
-    <!-- The button that appears at the bottom of an error page. -->
-    <string name="mozac_browser_errorpages_page_go_back">Артқа</string>
 
     <!-- The document title and heading of an error page shown when a website cannot be loaded for an unknown reason. -->
     <string name="mozac_browser_errorpages_generic_title">Сұранымды аяқтау мүмкін емес</string>
@@ -43,6 +37,26 @@
     <string name="mozac_browser_errorpages_security_bad_cert_back">Артқа оралу (ұсынылады)</string>
     <!-- The text shown inside the advanced options button used to bypass the invalid SSL certificate. It's only shown if the user has expanded the advanced options. -->
     <string name="mozac_browser_errorpages_security_bad_cert_accept_temporary">Тәуекелді қабылдап, жалғастыру</string>
+
+    <!-- The document title and heading of the error page shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_title">Бұл веб-сайт қауіпсіз байланысты талап етеді.</string>
+    <!-- The error message shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_message"><![CDATA[
+      <ul>
+         <li>Сіз көргіңіз келетін бетті көрсету мүмкін емес, себебі бұл веб-сайт қауіпсіз байланысты талап етеді.</li>
+         <li>Мәселе веб-сайтта болуы мүмкін және оны шешу үшін ештеңе істей алмайсыз.</li>
+         <li>Веб-сайттың әкімшісіне мәселе туралы хабарлауға болады.</li>
+      </ul>
+    ]]></string>
+
+    <!-- The text shown inside the advanced button used to expand the advanced options. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_advanced">Қосымша…</string>
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo"><![CDATA[
+        <label> <b>%1$s</b> сайтының HTTP Strict Transport Security (HSTS) деп аталатын қауіпсіздік саясаты бар, бұл дегеніміз, <b>%2$s</b> оған тек қауіпсіз түрде байланыса алады. Бұл веб-сайт үшін ережеден тыс жағдайды қоса алмайсыз.
+    ]]></string>
+    <!-- The text shown inside the advanced options button used to go back. It's only shown if the user has expanded the advanced options. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_back">Артқа</string>
 
     <!-- The document title and heading of the error page shown when the user's network connection is interrupted while connecting to a website. -->
     <string name="mozac_browser_errorpages_net_interrupt_title">Байланыс үзілген</string>
@@ -239,4 +253,11 @@
     <string name="mozac_browser_errorpages_safe_phishing_uri_title">Жалған сайт мәселесі</string>
     <!-- The %1$s will be replaced by the malicious website URL-->
     <string name="mozac_browser_errorpages_safe_phishing_uri_message"><![CDATA[<p>%1$s сайты жалған сайт екені туралы ақпарат бар, сондықтан қауіпсіздік баптауларыңызға сәйкес ол бұғатталды.</p>]]></string>
+
+    <!-- The title of the error page for websites that do not support HTTPS when HTTPS-Only is turned on -->
+    <string name="mozac_browser_errorpages_httpsonly_title">Қауіпсіз сайт қолжетімді емес</string>
+    <!-- The text of the error page for websites that do not support HTTPS when HTTPS-Only is turned on. %1$s will be replaced with the URL of the website. -->
+    <string name="mozac_browser_errorpages_httpsonly_message"><![CDATA[Сіз жақсартылған қауіпсіздік үшін тек-HTTPS режимін іске қосқансыз, бірақ, <em>%1$s</em> адресінің HTTPS нұсқасы қолжетімсіз.]]></string>
+    <!-- Button on error page for websites that do not support HTTPS when HTTPS-Only is turned on. Clicking the button allows the user to nevertheless load the website using HTTP. -->
+    <string name="mozac_browser_errorpages_httpsonly_button">HTTP сайтына өту</string>
 </resources>
