--- a/components/feature/sitepermissions/src/main/res/values-oc/strings.xml
+++ b/components/feature/sitepermissions/src/main/res/values-oc/strings.xml
@@ -35,4 +35,14 @@
     <string name="mozac_feature_sitepermissions_persistent_storage_title">Voletz autorizar %1$s a servar las donadas dins l’estocatge persistent ?</string>
     <!-- Title of a dialog to use EME. %1$s will be replaced with the URL of the current page -->
     <string name="mozac_feature_sitepermissions_media_key_system_access_title">Permetre a %1$s de legir lo contengut contrarotlat per DRM ?</string>
+    <!-- Title of a dialog to use cross origin storage permission. %1$s is the name of the site URL (www.site1.example) trying to track the user's activity.
+     %2$s is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar -->
+    <string name="mozac_feature_sitepermissions_storage_access_title">Permetre a %1$s d’utilizar sos cookies sus %2$s ?</string>
+    <!-- Message of a dialog offering more context about the cross origin storage permission.
+    %s is the name of the site URL (www.site1.example) trying to track the user's activity. -->
+    <string name="mozac_feature_sitepermissions_storage_access_message">Volriatz benlèu blocar l’accès se sabètz pas exactament perque %s a mestièr de vòstras donadas.</string>
+    <!-- Text for a negative button in the storage access permission request dialog. This button will not give access to this permission. -->
+    <string name="mozac_feature_sitepermissions_storage_access_not_allow">Blocar</string>
+    <!-- Clickable text that will open a new tab navigating the user to online documentation about specific features. -->
+    <string name="mozac_feature_sitepermissions_learn_more_title">Ne saber mai</string>
 </resources>
